# llamax

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
.claude/skills/fetch-action-logs/: SKILL.md
.claude/skills/fix-pr-comments/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: gpu_test.yml  lint.yml  test.yml
llamax/: __init__.py  ci_gpu.py  deepspeed_sparse_attention.py  deepspeed_sparse_attention_test.py  example_gpu.py  generate.py  generate_test.py  integration_test.py  integration_tests.py  model.py  model_test.py  nsa.py  nsa_test.py  reference_model_torch.py
scripts/: README.md  run_gpu_tests.sh
