[project]
name = "llamax"
version = "0.1.0"
description = "A basic Flax library with reference implementations of various LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax==0.4.34",
    "jaxlib==0.4.34",
    "flax==0.10.0",
    "torch==2.5.0",
    "numpy==2.1.2",
    "pytest==8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "parameterized==0.9.0",
    "psutil==6.1.0",
    "coverage-badge==1.1.2",
    "transformers==4.45.2",
    "sentencepiece==0.2.0",
    "jax-dataclasses==1.6.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]
ignore = ["N812"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
